New updates for my project

--- a/pages/index.css
+++ b/pages/index.css
@@ -3,7 +3,9 @@
   max-width: 1600px;
   margin: 0 auto;
   font-family: "Inter", Arial;
-  font-family: "Noto Serif", "Times New Roman";
   font-size: 16px;
   line-height: 20px;
+}
+
+.footer {
 }
