--- a/pages/index.css
+++ b/pages/index.css
@@ -121,6 +121,7 @@
   padding: 100px 80px 215px;
   background: #0a2750;
   background-image: url("../images/background_recipes.svg");
+  color: #ffffff;
 }
 
 .recipes__title {
@@ -166,6 +167,95 @@
   font-weight: 500;
   font-size: 20px;
   line-height: 30px;
+}
+
+.reservation {
+  background-image: url(../images/background_reservation.svg);
+  background-size: cover;
+  background-color: #d9e7ff;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  margin: 100px 0 120px;
+  color: #000000;
+}
+
+.reservation__title {
+  margin: 100px 0 80px 0;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 44px;
+  line-height: 20px;
+  margin-bottom: 80px;
+}
+
+.form__fieldset {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+  border: none;
+}
+
+.form__fieldset:first-of-type {
+  margin-bottom: 32px;
+}
+
+.form__fieldset_button {
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.form__input {
+  border: 4px;
+  max-width: 385px;
+  height: 60px;
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 30px;
+  color: #838383;
+}
+
+.form__button {
+  background-color: #2f80ed;
+  opacity: 100%;
+
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.form__button:hover {
+  transition: background-color linear;
+  opacity: 70%;
+}
+
+.form__fieldset_checkbox {
+  border: 2px;
+  flex-wrap: wrap;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  align-items: center;
+  gap: 12px;
+}
+
+.form__checkbox {
+  width: 20px;
+  height: 100px;
+}
+
+.form__label {
 }
 
 .footer {
