--- a/pages/index.css
+++ b/pages/index.css
@@ -1,265 +1,12 @@
-.page {
-  min-width: 1100px;
-  max-width: 1600px;
-  margin: 0 auto;
-  font-family: "Inter", Arial;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.content {
-  color: #000000;
-}
-
-.header {
-  padding: 30px 80px 40px;
-  display: flex;
-  flex-direction: column;
-  min-height: 720px;
-  max-height: 800px;
-  height: 100vh;
-  position: relative;
-  background-image: url("../images/background_header.svg");
-  z-index: 0;
-}
-
-.header__image {
-  width: 646px;
-  height: 568px;
-  position: absolute;
-  z-index: 1;
-  margin: 124px 5px 0 0;
-  right: 0;
-  z-index: -1;
-}
-
-.nav {
-  display: flex;
-  justify-content: space-between;
-}
-
-.nav__links {
-  display: flex;
-  padding: 0;
-  margin: 0;
-  gap: 20px;
-  list-style-type: none;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.nav__link:hover {
-  color: #2f80ed;
-}
-
-.nav__logo {
-  position: relative;
-  left: -50px;
-  width: 105px;
-  height: 39px;
-}
-
-.nav__link {
-  color: #000;
-  text-decoration: none;
-}
-
-.header__title {
-  max-width: 729px;
-  font-family: "Inter";
-  font-size: 60px;
-  font-weight: 500;
-  line-height: 72px;
-  margin: 183px 0 0;
-  letter-spacing: -0.6px;
-}
-
-.header__span-accent {
-  display: block;
-  color: #2f80ed;
-  font-family: "Noto Serif";
-  font-style: italic;
-  font-weight: normal;
-  font-size: 60px;
-  line-height: 72px;
-}
-
-.header__description {
-  max-width: 683px;
-  font-family: "Noto Seriff";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin: 28px 0 0;
-}
-
-.header__footer {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  color: #6f6f6f;
-  display: flex;
-  justify-content: space-between;
-  margin-top: auto;
-}
-
-.header__paragraph {
-  margin: 0;
-  color: #6f6f6f;
-}
-
-.header_paragraph :last-of-type {
-}
-
-.recipes {
-  padding: 100px 80px 215px;
-  background: #0a2750;
-  background-image: url("../images/background_recipes.svg");
-  color: #ffffff;
-}
-
-.recipes__title {
-  max-width: 580px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-}
-
-.recipes__subtitle {
-  max-width: 438px;
-  margin-top: 24px;
-  font-family: "Noto Seriff";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  margin-bottom: 0;
-  margin-right: 0;
-}
-
-.recipes__videos {
-  display: flex;
-  justify-content: center;
-  gap: 40px;
-  margin-top: 80px;
-}
-
-.recipes__iframe {
-  width: 480px;
-  height: 273px;
-  border: 0;
-}
-
-.recipes__video-caption {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 24px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-}
-
-.reservation {
-  background-image: url(../images/background_reservation.svg);
-  background-size: cover;
-  background-color: #d9e7ff;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-content: center;
-  margin: 100px 0 120px;
-  color: #000000;
-}
-
-.reservation__title {
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 44px;
-  line-height: 52px;
-  margin: 100px 0 80px;
-}
-
-.form {
-  margin: 0;
-}
-
-.form__fieldset {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-  border: none;
-}
-
-.form__fieldset:first-of-type {
-  margin-bottom: 32px;
-}
-
-.form__fieldset_button {
-  margin-top: 32px;
-  margin-bottom: 32px;
-}
-
-.form__input {
-  border: 4px;
-  max-width: 385px;
-  height: 60px;
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: normal;
-  font-size: 20px;
-  line-height: 30px;
-  color: #838383;
-}
-
-.form__button {
-  background-color: #2f80ed;
-  opacity: 100%;
-
-  font-family: "Inter";
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 20px;
-}
-
-.form__button:hover {
-  transition: background-color linear;
-  opacity: 70%;
-}
-
-.form__fieldset_checkbox {
-  border: 2px;
-  flex-wrap: wrap;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: center;
-  align-items: center;
-  gap: 12px;
-}
-
-.form__checkbox {
-  width: 20px;
-  height: 100px;
-}
-
-.form__label {
-}
-
-.footer {
-}
+@import url("/blocks/page.css");
+@import url("../blocks/page.css");
+@import url("../blocks/content.css");
+@import url("../blocks/header.css");
+@import url("../blocks/nav.css");
+@import url("../blocks/recipes.css");
+@import url("../blocks/reservation.css");
+@import url("../blocks/form.css");
+@import url("../vendor/normalize.css");
+@import url("../blocks/menu.css");
+@import url("../blocks/about.css");
+@import url("../blocks/footer.css");
