--- a/pages/index.css
+++ b/pages/index.css
@@ -1,3 +1,4 @@
+@import url("../vendor/normalize.css");
 @import url("/blocks/page.css");
 @import url("../blocks/page.css");
 @import url("../blocks/content.css");
@@ -10,3 +11,4 @@
 @import url("../blocks/menu.css");
 @import url("../blocks/about.css");
 @import url("../blocks/footer.css");
+@import url("../blocks/card.css");
