--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -1,5 +1,6 @@
 .reservation {
   background-image: url(../images/background_reservation.svg);
+  background-position: center;
   background-size: cover;
   background-color: #d9e7ff;
   display: flex;
@@ -11,9 +12,11 @@
 }
 
 .reservation__title {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
