--- a/blocks/about.css
+++ b/blocks/about.css
@@ -16,12 +16,11 @@
   justify-content: space-between;
   position: relative;
   overflow: hidden;
-
   margin: auto;
 }
 
 .about__title {
-  font-family: "Inter";
+  font-family: "Inter" Arial, "Sans-serif";
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -30,12 +29,13 @@
   margin-left: 80px;
   max-width: 251px;
   z-index: 1;
-  color: #ffffff;
+  color: #fff;
+  margin: 0;
 }
 
 .about__content {
-  color: #ffffff;
-  font-family: "Noto Seriff";
+  color: #fff;
+  font-family: "Noto Serif" Arial;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -45,7 +45,7 @@
   gap: 20px;
 }
 
-.about__paragrph {
+.about__paragraph {
 }
 
 .about__circle {
@@ -60,12 +60,6 @@
 }
 
 .about__circle_animation_blurred {
-  background-color: #2f80ed;
-  width: 426px;
-  height: 426px;
-  border-radius: 50%;
-  margin-top: -152px;
-  margin-left: -129px;
   z-index: 0;
   position: absolute;
   animation: pulsate 1.3s ease-in-out infinite;
