--- a/blocks/card.css
+++ b/blocks/card.css
@@ -3,12 +3,11 @@
 }
 
 .card:first-of-type {
-  margin-right: 100px;
-  margin-bottom: 100px;
+  gap: 100px;
 }
 
 .card__title {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 20px;
@@ -18,6 +17,8 @@
 }
 
 .card__list {
+  margin-top: 0;
+  margin-bottom: 0;
   padding-left: 0;
 }
 
@@ -27,12 +28,16 @@
   font-weight: normal;
   font-size: 16px;
   line-height: 20px;
-  padding-bottom: 16px;
+  gap: 16px;
   padding-left: 0;
   margin: 0;
   list-style-type: none;
   display: flex;
   justify-content: space-between;
+}
+
+.card__list-item:last-of-type {
+  padding-bottom: 0xoc;
 }
 
 .card__list-divider {
