--- a/blocks/form.css
+++ b/blocks/form.css
@@ -1,43 +1,45 @@
 .form {
   margin: 0;
+  max-width: 385px;
+  width: 100%;
 }
 
 .form__fieldset {
   display: flex;
   flex-direction: column;
   gap: 8px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   border: none;
+  padding: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
 
 .form__fieldset:first-of-type {
   margin-bottom: 32px;
 }
 
-.form__fieldset_button {
-  margin-top: 32px;
-  margin-bottom: 32px;
-}
-
-.form__fieldset_checkbox {
+.form__label_type_checkbox {
   border: 2px;
   flex-wrap: wrap;
   display: flex;
-  flex-direction: row-reverse;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 12px;
+  padding-top: 32px;
 }
 
 .form__input {
+  box-sizing: border-box;
   border: 4px;
   max-width: 385px;
   height: 60px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -48,8 +50,8 @@
 .form__button {
   background-color: #2f80ed;
   opacity: 100%;
-
-  font-family: "Inter";
+  border: none;
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -63,5 +65,6 @@
 
 .form__checkbox {
   width: 20px;
-  height: 100px;
+  height: 20px;
+  margin: 0;
 }
