--- a/blocks/header.css
+++ b/blocks/header.css
@@ -2,17 +2,20 @@
   padding: 30px 80px 40px;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
   min-height: 720px;
   max-height: 800px;
   height: 100vh;
   position: relative;
   background-image: url("../images/background_header.svg");
+  background-size: cover;
+  background-position: center;
   z-index: 0;
 }
 
 .header__title {
   max-width: 729px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-size: 60px;
   font-weight: 500;
   line-height: 72px;
@@ -45,8 +48,8 @@
   height: 568px;
   position: absolute;
   z-index: 1;
-  margin: 124px 5px 0 0;
-  right: 0;
+  top: 124px;
+  right: 5px;
   z-index: -1;
 }
 
@@ -56,13 +59,14 @@
 }
 
 .header__footer {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
   color: #6f6f6f;
   display: flex;
+  align-items: flex-end;
   justify-content: space-between;
   margin-top: auto;
 }
