--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -1,6 +1,7 @@
 .menu {
   background-color: #fff;
   background-image: url(../images/background_menu.svg);
+  background-position: center;
   background-size: cover;
   display: flex;
   align-content: center;
@@ -11,16 +12,18 @@
 }
 
 .menu__title {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
   line-height: 52px;
   max-width: 780px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 .menu__subtitle {
-  font-family: "Noto Seriff";
+  font-family: "Noto Serif";
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
@@ -35,4 +38,5 @@
   justify-content: center;
   flex-wrap: wrap;
   margin: 0;
+  gap: 100px;
 }
