--- a/blocks/card.css
+++ b/blocks/card.css
@@ -2,10 +2,6 @@
   width: 540px;
 }
 
-.card:first-of-type {
-  gap: 100px;
-}
-
 .card__title {
   font-family: "Inter", Arial, sans-serif;
   font-style: normal;
@@ -23,7 +19,7 @@
 }
 
 .card__list-item {
-  font-family: "Noto Serif";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -31,14 +27,18 @@
   gap: 16px;
   padding-left: 0;
   margin: 0;
+  margin-bottom: 16px;
   list-style-type: none;
   display: flex;
   justify-content: space-between;
 }
 
 .card__list-item:last-of-type {
-  padding-bottom: 0xoc;
+  padding-bottom: 0;
 }
 
 .card__list-divider {
+  display: block;
+  flex-grow: 1;
+  border-bottom: 1px solid black;
 }
