--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -16,7 +16,7 @@
 }
 
 .footer__social-heading {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
@@ -31,7 +31,7 @@
 }
 
 .footer__list-item {
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
@@ -54,6 +54,7 @@
   color: #fff;
   display: flex;
   align-items: center;
+  text-decoration: none;
 }
 
 .footer__social-link:hover {
@@ -63,7 +64,7 @@
 
 .footer__copyright {
   color: #ffffff;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
