--- a/blocks/form.css
+++ b/blocks/form.css
@@ -19,18 +19,16 @@
   margin-right: 0;
 }
 
-.form__fieldset:first-of-type {
-  margin-bottom: 32px;
-}
-
 .form__label_type_checkbox {
-  border: 2px;
+  border-radius: 2px;
+  border-color: #838383;
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   gap: 12px;
+  margin-bottom: 32px;
   padding-top: 32px;
 }
 
@@ -44,11 +42,13 @@
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
+  margin-bottom: 32px;
   color: #838383;
 }
 
 .form__button {
   background-color: #2f80ed;
+  color: #fff;
   opacity: 100%;
   border: none;
   font-family: "Inter", Arial, sans-serif;
@@ -56,6 +56,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 20px;
+  height: 60px;
 }
 
 .form__button:hover {
