--- a/blocks/recipes.css
+++ b/blocks/recipes.css
@@ -8,7 +8,7 @@
 
 .recipes__title {
   max-width: 580px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 44px;
@@ -20,12 +20,11 @@
 .recipes__subtitle {
   max-width: 438px;
   margin-top: 24px;
-  font-family: "Noto Seriff";
+  font-family: "Noto Serif", "Times New Roman", serif;
   font-style: normal;
   font-weight: normal;
   font-size: 20px;
   line-height: 30px;
-  margin-top: 0;
   margin-bottom: 0;
   margin-right: 0;
 }
@@ -41,7 +40,7 @@
   display: flex;
   justify-content: space-between;
   margin-top: 24px;
-  font-family: "Inter";
+  font-family: "Inter", Arial, sans-serif;
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
