--- a/blocks/about.css
+++ b/blocks/about.css
@@ -68,3 +68,87 @@
 .about__circle_animation_blurred {
   animation: pulsate 1.3s ease-in-out infinite;
 }
+
+/* === Responsive for about section === */
+
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .about {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    margin-bottom: 0;
+  }
+
+  .about__title {
+    font-size: 28px;
+    line-height: 36px;
+    text-align: center;
+    margin: 20px 0;
+  }
+
+  .about__content {
+    display: flex;
+    font-size: 14px;
+    line-height: 20px;
+    margin-top: 104px;
+    flex-direction: column;
+  }
+
+  .about__circle {
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+  }
+
+  .about__paragraph {
+    width: 75vw;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .about {
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 40px 20px;
+  }
+
+  .about__title {
+    font-size: 36px;
+    line-height: 44px;
+    max-width: 50%;
+  }
+
+  .about__content {
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 45%;
+  }
+
+  .about__circle {
+    width: 300px;
+    height: 300px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .about {
+    padding: 60px 80px;
+    margin-bottom: 0.1%;
+  }
+
+  .about__title {
+    font-size: 44px;
+    line-height: 52px;
+  }
+
+  .about__content {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .about__circle {
+    width: 426px;
+    height: 426px;
+  }
+}
