--- a/blocks/card.css
+++ b/blocks/card.css
@@ -42,3 +42,54 @@
   flex-grow: 1;
   border-bottom: 1px solid black;
 }
+/* === Responsive for cards === */
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .card {
+    width: 90%;
+    margin: 10px auto;
+  }
+
+  .card__title {
+    font-size: 18px;
+    line-height: 24px;
+  }
+
+  .card__list-item {
+    font-size: 14px;
+    line-height: 18px;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .card {
+    width: 48%;
+    margin: 1%;
+  }
+
+  .card__title {
+    font-size: 20px;
+    line-height: 28px;
+  }
+
+  .card__list-item {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .card {
+    width: 30%;
+    margin: 1.5%;
+  }
+
+  .card__title {
+    font-size: 20px;
+    line-height: 30px;
+  }
+
+  .card__list-item {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
