--- a/blocks/content.css
+++ b/blocks/content.css
@@ -1,3 +1,30 @@
 .content {
   color: #000000;
 }
+
+/* === Responsive for content === */
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .content {
+    padding: 5px 5px 1px 5px;
+    font-size: 14px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .content {
+    padding: 2px 2px 1px 2px;
+    font-size: 16px;
+    line-height: 24px;
+    max-width: 100%;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .content {
+    max-width: 1600px;
+    margin: 0 auto;
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
