--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -72,3 +72,48 @@
   padding: 0 0 60px 80px;
   margin: 0;
 }
+/* === Responsive for footer === */
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .footer__content {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 30px 20px;
+    text-align: left;
+    gap: 20px;
+  }
+
+  .footer {
+    padding: 0;
+  }
+
+  .footer__copyright {
+    padding: 20px 10px;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .footer {
+    padding: 40px 20px;
+  }
+
+  .footer__content {
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 20px;
+  }
+
+  .footer__logo {
+    width: 105px;
+    height: 39px;
+  }
+  .footer__copyright {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .footer {
+    padding: 60px 80px;
+  }
+}
