--- a/blocks/header.css
+++ b/blocks/header.css
@@ -70,3 +70,129 @@
   justify-content: space-between;
   margin-top: auto;
 }
+
+/* === Responsive for header === */
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .header {
+    padding: 20px 10px;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: auto;
+    min-height: unset;
+    max-height: unset;
+    overflow-x: hidden;
+  }
+
+  .header__title {
+    font-size: 32px;
+    line-height: 42px;
+    margin: 40px 0 0;
+    word-break: break-word;
+  }
+
+  .header__span-accent {
+    font-size: 32px;
+    line-height: 42px;
+  }
+
+  .header__description {
+    font-size: 15px;
+    line-height: 24px;
+    margin: 16px 0 0;
+  }
+
+  .header__image {
+    width: 100%;
+    height: auto;
+    position: relative;
+    margin-top: 20px;
+    top: 0;
+  }
+
+  .header__footer {
+    flex-direction: column;
+    font-size: 14px;
+    text-align: center;
+    margin-top: 30px;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .header {
+    height: auto;
+    justify-content: space-between;
+    padding: 2px;
+  }
+
+  .header__title {
+    font-size: 1.5rem;
+    line-height: 60px;
+    margin: 0;
+  }
+
+  .header__span-accent {
+    font-size: 50px;
+    line-height: 60px;
+  }
+
+  .header__description {
+    font-size: 18px;
+    line-height: 28px;
+    margin: 25px 0 0;
+  }
+
+  .header__image {
+    width: 74%;
+    height: 50vh;
+    max-height: 80vh;
+    position: relative;
+    top: 0;
+    right: 0;
+  }
+
+  .header__footer {
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .header {
+    padding: 1%;
+  }
+
+  .header__title {
+    font-size: 2.5rem;
+    line-height: 72px;
+    margin: 0;
+  }
+
+  .header__span-accent {
+    font-size: 60px;
+    line-height: 72px;
+  }
+
+  .header__description {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 28px 0 0;
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    gap: 10%;
+  }
+
+  .header__image {
+    width: 646px;
+    height: 568px;
+    position: absolute;
+    top: 124px;
+    right: 5px;
+  }
+
+  .header__footer {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
