--- a/blocks/menu.css
+++ b/blocks/menu.css
@@ -40,3 +40,53 @@
   margin: 0;
   gap: 100px;
 }
+
+/* === Responsive for menu section === */
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .menu {
+    padding: 20px;
+    text-align: center;
+    margin: 0;
+  }
+
+  .menu__title {
+    font-size: 28px;
+    line-height: 36px;
+  }
+
+  .menu__subtitle {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .menu {
+    padding: 40px;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+
+  .menu__cards {
+    flex-wrap: wrap;
+    gap: 20px;
+    justify-content: center;
+  }
+
+  .menu__title {
+    font-size: 36px;
+    line-height: 44px;
+    text-align: center;
+  }
+
+  .menu__subtitle {
+    font-size: 18px;
+    line-height: 28px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .menu {
+    margin: 0;
+  }
+}
