--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,8 +1,35 @@
 .page {
-  min-width: 1100px;
+  width: 100%;
   max-width: 1600px;
   margin: 0 auto;
   font-family: "Inter", Arial, sans-serif;
   font-size: 16px;
   line-height: 20px;
+}
+
+/* === Responsive for page layout === */
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .page {
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .page {
+    width: 100%;
+    max-width: 100%;
+    padding: 0;
+    margin: 0 auto;
+    box-sizing: border-box;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .page {
+    max-width: 1600px;
+    margin: 0 auto;
+  }
 }
