--- a/blocks/reservation.css
+++ b/blocks/reservation.css
@@ -21,3 +21,39 @@
   text-align: center;
   margin-bottom: 80px;
 }
+
+/* === Responsive for reservation === */
+@media screen and (min-width: 320px) and (max-width: 680px) {
+  .reservation {
+    padding: 20px;
+  }
+
+  .reservation__title {
+    font-size: 28px;
+    line-height: 36px;
+  }
+}
+
+@media screen and (min-width: 681px) and (max-width: 1024px) {
+  .reservation {
+    padding: 40px 20px;
+    max-width: 100%;
+  }
+
+  .reservation__title {
+    font-size: 36px;
+    line-height: 44px;
+    text-align: center;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  .reservation {
+    padding: 60px 80px;
+  }
+
+  .reservation__title {
+    margin-bottom: 5%;
+  }
+}
